--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,15 @@
   "description": "Backend Server with user/password authentication and JWT based authoriztion",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon -r dotenv/config app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.11"
   }
 }
